<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/rank_no_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/playeradapter_viewhead_no"
        android:textColor="@color/blueviolet"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/rank_name_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/playeradapter_viewhead_name"
        android:textColor="@color/salmon"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/rank_count_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/playeradapter_viewhead_count"
        android:textColor="@color/sandybrown"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>
