<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/main_layout1"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/main_gn_iv_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="TODO"
                android:background="@drawable/gn_drawable_pic_001" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/main_layout2"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:layout_below="@id/main_layout1">

            <Button
                android:id="@+id/main_gn_bt_start"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/main_bt_Start" />

            <Button
                android:id="@+id/main_gn_bt_continue"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/main_gn_bt_continue"
                android:layout_below="@id/main_gn_bt_start"/>

            <Button
                android:id="@+id/main_gn_bt_rank"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/main_bt_Rank"
                android:layout_below="@id/main_gn_bt_continue"/>
        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>